--- a/src/windows/ZipComponentUWP/ZipComponentUWP.vcxproj.filters
+++ b/src/windows/ZipComponentUWP/ZipComponentUWP.vcxproj.filters
@@ -34,6 +34,9 @@
     <ClCompile Include="Source\ZipComponent.cpp">
       <Filter>Source</Filter>
     </ClCompile>
+    <ClCompile Include="Source\ZipComponent.Version.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Libraries\andyzip\include\andyzip\algorithm.hpp">
@@ -78,8 +81,16 @@
     <ClInclude Include="Source\ZipComponent.h">
       <Filter>Source</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Resource.h">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="ZipComponentUWP.rc">
+      <Filter>Resources</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
