--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "@types/cordova": "^0.0.34",
     "@types/jszip": "^3.4.1",
     "@types/winjs": "^4.4.0",
+    "@types/winrt-uwp": "^0.0.23",
+    "cordova-plugin-device": "^2.1.0",
+    "cordova-plugin-file": "^7.0.0",
     "jszip": "^3.6.0"
   }
 }
