--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "cordova-plugin-zip",
-  "version": "3.2.6",
+  "version": "3.2.7",
   "description": "Unzips zip files",
   "cordova": {
-    "id": "cordova-plugin-unzip",
+    "id": "cordova-plugin-unzip", 
     "platforms": [
       "android",
       "ios",
-      "windows"
+      "windows",
+      "electron"
     ]
   },
   "repository": {
@@ -17,14 +18,12 @@
   "keywords": [
     "ecosystem:cordova",
     "cordova-android",
-    "cordova-ios"
+    "cordova-ios",
+    "cordova-electron"
   ],
-  "engines": [
-    {
-      "name": "cordova",
-      "version": ">=3.3.0"
-    }
-  ],
+  "engines": {
+    "cordova": ">=3.3.0"
+  },
   "author": "",
   "license": "BSD",
   "bugs": {
