--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "cordova-plugin-zip",
-  "version": "3.2.9",
+  "version": "3.2.10",
   "description": "Unzips zip files",
+  "types": "types/index.d.ts",
   "cordova": {
-    "id": "cordova-plugin-unzip", 
+    "id": "cordova-plugin-unzip",
     "platforms": [
       "android",
       "ios",
@@ -31,16 +32,13 @@
   },
   "homepage": "https://github.com/MobileChromeApps/zip",
   "devDependencies": {
-    "@types/cordova": "^0.0.34",
+    "@types/cordova": "^11.0.3",
     "@types/jszip": "^3.4.1",
     "@types/winjs": "^4.4.0",
     "@types/winrt-uwp": "^0.0.23",
-    "cordova-plugin-device": "^2.1.0",
-    "cordova-plugin-file": "^7.0.0",
-    "jszip": "^3.6.0"
-  },
-  "dependencies": {
     "cordova-android": "^11.0.0",
-    "cordova-plugin-file": "^8.0.0"
+    "cordova-plugin-device": "^2.1.0",
+    "cordova-plugin-file": "^8.0.1",
+    "jszip": "^3.6.0"
   }
 }
