--- a/src/electron/package.json
+++ b/src/electron/package.json
@@ -1,7 +1,7 @@
 {
     "name": "cordova-plugin-zip",
     "version": "0.0.0",
-    "main": "ZipProxy.js",
+    "main": "index.js",
     "cordova": {
         "serviceName": "Zip"
     },
@@ -9,5 +9,8 @@
         "decompress": "^4.2.1",
         "electron": "^26.0.0",
         "extract-zip": "^2.0.1"
+    },
+    "devDependencies": {
+        "@types/node": "^20.8.10"
     }
 }
