--- a/src/electron/package.json
+++ b/src/electron/package.json
@@ -7,10 +7,10 @@
     },
     "dependencies": {
         "decompress": "^4.2.1",
-        "electron": "^26.0.0",
         "extract-zip": "^2.0.1"
     },
     "devDependencies": {
-        "@types/node": "^20.8.10"
+        "@types/node": "^20.8.10",
+        "electron": "^26.0.0"
     }
 }
